Bug 129856 - Visual artifacts when scrolling in Tools > Options > LibreOffice > Paths dialog
Summary: Visual artifacts when scrolling in Tools > Options > LibreOffice > Paths dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-01-07 11:43 UTC by Ming Hua
Modified: 2020-06-16 15:17 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the header buttons after scrolling (5.19 KB, image/png)
2020-01-07 11:43 UTC, Ming Hua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ming Hua 2020-01-07 11:43:58 UTC
Created attachment 156983 [details]
Screenshot of the header buttons after scrolling

With LO 6.4, "Internal Paths" are added to the Tools > Options > LibreOffice > Paths dialog, and as a result the content is usually wide enough that horizontal scrolling is needed.  When I use the mouse and the scroll bar at the bottom of the dialog to scroll, I see black vertical lines showing up on the header buttons.  When I scroll back, there are more of these lines on the headers.  Clicking on the header clears these artifacts, but scrolling will make them appear again.

Screenshot is attached.

I start seeing them from 6.4.0 beta, the first time I looked at this new "Internal Paths" feature.  I can still reproduce in 6.4.0 rc1 now.
Version: 6.4.0.1 (x64)
Build ID: 1b6477b31f0334bd8620a96f0aeeb449b587be9f
CPU threads: 2; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: zh-CN (zh_CN); UI-Language: en-US
Calc: threaded
Comment 1 Durgapriyanka 2020-01-07 16:18:56 UTC
Thank you for reporting the bug. I can confirm the bug present in

Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
	

But, not in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 m_a_riosv 2020-01-07 22:21:10 UTC
Repro
Version: 6.4.0.1 (x64)
Build ID: 1b6477b31f0334bd8620a96f0aeeb449b587be9f
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc:

Less visible with OpenGL enable.
Comment 3 Aron Budea 2020-06-06 07:06:29 UTC
It can also be reproduced in Linux with gen VCL plugin.
This is actually a regression from the following commit, there are no artifacts before that (I noticed a bit of flickering, but that is probably not relevant). Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3f738d8f9e5c448ddf352a8e10e6c619dde7d87d
author		Caolán McNamara <caolanm@redhat.com>	2019-08-01 11:50:08 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-08-01 15:20:29 +0200

weld SvxPathTabPage
Comment 4 Caolán McNamara 2020-06-09 11:26:56 UTC
I feel its a preexisting scroll+invalidate bug which didn't matter until we began using the headerbar in a different way
Comment 5 Commit Notification 2020-06-09 18:35:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bff76e27eba1e496838f3673c3cea43fd535b7c7

tdf#129856 invalidate old internal border if we scroll

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-06-09 19:18:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/6250b2bebfc8179e1c618dc79a9b74c8efe06629

tdf#129856 invalidate old internal border if we scroll

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-06-09 19:21:31 UTC
fixed in master and 7-0
Comment 8 Xisco Faulí 2020-06-16 15:17:58 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 11d21b3c1f7754b5d13ae9ea88da562ec74366ff
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!