tdf#129856 invalidate old internal border if we scroll

and will redraw a new one

Change-Id: I2438af94e54f31c617cc183c61fbaaef31b5601f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95887
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>